# Atlas

./: CMakeLists.txt  CommonIncludeList.cmake  README.md  SourcesList.cmake  main.cpp
GUI/: Atlas  (+21 more)
src/: AtlasApp.cpp  CMakeLists.txt  Client.cpp  MainFrame.cpp  MainFrame.h  NodeContainer.h  Server.cpp  main.cpp  test.xrc
src/atlas_app/: AtlasApp.cpp  AtlasApp.h  MainFrame.cpp  MainFrame.h
src/boulderbreaker/callback/: ICallback.h
src/boulderbreaker/function_core/: ASyncFunctionCore.cpp  ASyncFunctionCore.h  IFunctionCore.h  TestCore.h  ThreadedFunctionCore.cpp  ThreadedFunctionCore.h
src/boulderbreaker/function_core/file_core/: FileCore.cpp  FileCore.h
src/boulderbreaker/function_core/general_purpose_core/: GeneralPurposeCore.cpp  GeneralPurposeCore.h
src/boulderbreaker/function_core/job_core/: JobCore.cpp  JobCore.h
src/boulderbreaker/function_core/resource_core/: ResourceCore.cpp  ResourceCore.h
src/boulderbreaker/grid/: GridConnection.cpp  GridConnection.h  GridNode.cpp  GridNode.h
src/boulderbreaker/handler/: IHandler.h  TestHandler.h
src/boulderbreaker/handler/job_handler/: JobHandler.cpp  JobHandler.h
src/boulderbreaker/handler/registration_handler/: RegistrationHandler.cpp  RegistrationHandler.h
src/boulderbreaker/job/: Argument.h  IJob.cpp  IJob.h  JobLog.h  JobRegistry.cpp  JobRegistry.h  Output.h
src/boulderbreaker/job/job_subprocess/: JobSubprocess.cpp  JobSubprocess.h
src/boulderbreaker/job/job_wait/: JobWait.cpp  JobWait.h
src/boulderbreaker/job/log/: JobLog.h
src/boulderbreaker/resources/: PCPerformance.cpp  PCPerformance.h
src/boulderbreaker/resources/performance_analyzer/: IPerformanceAnalyzer.h
src/boulderbreaker/search_policy/: IPCSearchPolicy.h
src/stonewall/comms/: BasicConnection.cpp  BasicConnection.h  BasicServer.h  IConnectionSocket.h  IServerSocket.h
src/stonewall/comms/basic/: BasicConnection.cpp  BasicConnection.h  BasicServer.cpp  BasicServer.h
src/stonewall/comms/winsocket/: WinConnectionSocket.cpp  WinConnectionSocket.h  WinServerSocket.cpp  WinServerSocket.h
src/stonewall/encryption/: RSAEncryptionModule.cpp  RSAEncryptionModule.h  RSAKey.h  euclid.cpp  euclid.h  mpuint.cpp  mpuint.h  random.cpp  random.h  rsa.cpp  rsa.h
src/stonewall/messages/: IMessage.h  IParser.h  ISerializer.h  SendJobPolicyMessage.h  SeperatorBasedMessage.h  SimpleStringMessage.h
src/stonewall/messages/accept_name/: AcceptNameMessage.cpp  AcceptNameMessage.h  AcceptNameParser.cpp  AcceptNameSerializer.cpp  AcceptNameSerializer.h
src/stonewall/messages/cancel_job/: CancelJobMessage.cpp  CancelJobMessage.h  CancelJobParser.cpp  CancelJobParser.h  CancelJobSerializer.cpp  CancelJobSerializer.h
src/stonewall/messages/disconnect/: DisconnectMessage.cpp  DisconnectMessage.h  DisconnectParser.cpp  DisconnectParser.h  DisconnectSerializer.cpp  DisconnectSerializer.h
src/stonewall/messages/reject_name/: RejectNameMessage.cpp  RejectNameMessage.h  RejectNameParser.cpp  RejectNameParser.h  RejectNameSerializer.cpp  RejectNameSerializer.h
src/stonewall/messages/request_best_node/: RequestBestNodeMessage.cpp  RequestBestNodeMessage.h  RequestBestNodeParser.cpp  RequestBestNodeParser.h  RequestBestNodeSerializer.cpp  RequestBestNodeSerializer.h
src/stonewall/messages/request_node_performance/: RequestNodePerformanceMessage.cpp  RequestNodePerformanceMessage.h  RequestNodePerformanceParser.cpp  RequestNodePerformanceParser.h  RequestNodePerformanceSerializer.cpp  RequestNodePerformanceSerializer.h
src/stonewall/messages/send_best_node/: SendBestNodeMessage.cpp  SendBestNodeMessage.h  SendBestNodeParser.cpp  SendBestNodeParser.h  SendBestNodeSerializer.cpp  SendBestNodeSerializer.h
src/stonewall/messages/send_job/: SendJobMessage.cpp  SendJobMessage.h  SendJobParser.cpp  SendJobParser.h  SendJobSerializer.cpp  SendJobSerializer.h
src/stonewall/messages/send_job_output/: SendJobOutputMessage.cpp  SendJobOutputMessage.h  SendJobOutputParser.cpp  SendJobOutputParser.h  SendJobOutputSerializer.cpp  SendJobOutputSerializer.h
src/stonewall/messages/send_job_policy/: SendJobPolicyMessage.cpp  SendJobPolicyMessage.h  SendJobPolicyParser.cpp  SendJobPolicyParser.h  SendJobPolicySerializer.cpp  SendJobPolicySerializer.h
src/stonewall/messages/send_node_performance/: SendNodePerformanceMessage.cpp  SendNodePerformanceMessage.h  SendNodePerformanceParser.cpp  SendNodePerformanceParser.h  SendNodePerformanceSerializer.cpp  SendNodePerformanceSerializer.h
src/stonewall/messages/send_rsa_key/: SendRSAKeyMessage.cpp  SendRSAKeyMessage.h  SendRSAKeyParser.cpp  SendRSAKeyParser.h  SendRSAKeySerializer.cpp  SendRSAKeySerializer.h
src/stonewall/messages/seperator_based/: SeperatorBasedMessage.cpp  SeperatorBasedMessage.h  SeperatorBasedParser.cpp  SeperatorBasedParser.h  SeperatorBasedSerializer.cpp  SeperatorBasedSerializer.h
src/stonewall/messages/set_name/: SetNameMessage.cpp  SetNameMessage.h  SetNameParser.cpp  SetNameParser.h  SetNameSerializer.cpp  SetNameSerializer.h
src/stonewall/messages/simple_string/: SimpleStringMessage.cpp  SimpleStringMessage.h  SimpleStringParser.cpp  SimpleStringParser.h  SimpleStringSerializer.cpp  (+1 more)
src/stonewall/parsers/: IParser.h  SendJobPolicyParser.h  SeperatorBasedParser.h  SimpleStringParser.h
src/stonewall/serializers/: ISerializer.h  SeperatorBasedSerializer.h  SimpleStringSerializer.h
src/stonewall/socket/: IConnectionSocket.h  IServerSocket.h
src/utils/: Cloneable.h  CyclicKalmanFilter.h  File.cpp  File.h  Logger.cpp  Logger.h  NodeContainer.h  Path.h  Singleton.cpp  Singleton.h  SmartThread.h  Utils.h
src/utils/subprocess/: SmartSubprocess.cpp  SmartSubprocess.h
test/: CMakeLists.txt  main.cpp
test/stonewall/encryption/: TestEncryptionModule.cpp
test/stonewall/messages/: TestCancelJobMessage.cpp  TestRequestBestNodeMessages.cpp  TestSendJobMessage.cpp  TestSendJobOutputMessage.cpp  TestSendJobPolicyMessages.cpp  TestSendNodePerformanceMessages.cpp  TestSeperatorBasedMessages.cpp
test/stonewall/socket/: BasicConnectionAndServer.cpp  WinSocketTest.cpp
test/utils/: FileTest.cpp
(+23 files in other folders)
